header z-index fixed

--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,7 @@ h2{
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 100;
 }
 
 .header__cz {
